
    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Statsoutput sometimes screwed -> NEGATIVE BYTES (due to parsing of x-dupe response)
    Dirlist confusion on linux development builds causing wrong skip files output (#265)
	
--=============================( SLFTP v1.5.9 )===================================-
    {#} Fixed an issue which could cause autodirlists to stop working on very busy sites when queue clean is enabled

--=============================( SLFTP v1.5.8 )===================================-
    {+} Reverse FXP can be enabled by command !reversefxp (#9)
    {+} cryptconf functionality integrated into slftp as command line utility, see 'slftp(.exe) --help' (#298)
    {+} Pure-FTPd support (#303)
    {+} Added OpenSSL 1.1.1 support (OpenSSL 1.0.2 no longer supported) (#90)
    {#} Fix 'No such directory' error flood if a subdir was deleted during a race (#200)
    {#} Fix not working pretime check retry (settings readd_attempts, readd_interval of [taskpretime])
    {#} Setting !maxupdn 1 0 1 to leech only pres did not work
    {^} New code for IMDb and Box Office Mojo website parsing
    {^} Slightly improved behaviour for STV/Wide/Limited determination
    {^} Less unnecessary 'tell your developer' messages to the admin channel
    {^} Improved detection of FTPD software and version
    {^} Send PBSZ command (Pure-FTPd requires it)
    {^} Setting global_skip in .ini is removed and replaced by global_skip_files and global_skip_dirs

--=============================( SLFTP v1.5.7 )===================================-
    {+} FastMM5 memory manager with better multithreading scaling for Windows (https://github.com/pleriche/FastMM5)
    {+} SynFPCx64MM memory manager with better multithreading scaling for x86_64
        (http://blog.synopse.info/post/2020/05/07/New-Multi-thread-Friendly-Memory-Manager-for-FPC-written-in-x86_64-assembly)