@@ -34,14 +34,32 @@ type
   }
   TRlsSiteStatus = (rssNotAllowed, rssNotAllowedButItsThere, rssAllowed, rssShouldPre, rssRealPre, rssComplete, rssNuked);
 
+  TPazoSite = class;
+
+  //used to store destination site and rank
+  TDestinationRank = record
+    private
+      FPazoSite: TPazoSite; //< destination site
+      FRank: integer; //< rank
+    public
+      property PazoSite: TPazoSite read FPazoSite;
+      property Rank: integer read FRank;
+      constructor Create(const aPazoSite: TPazoSite; const aRank: integer);
+   end;
+
   TPazoSite = class
+  private
+    cds: String;
+    FDestinations: TList<TDestinationRank>; //< destination sites and ranks
+    function Tuzelj(const netname, channel, dir: String; de: TDirListEntry): boolean;
+
   public
+
     midnightdone: boolean;
     Name: String; //< sitename
     maindir: String; //< sectiondir? TODO: debug real value
     pazo: TPazo; //< pazo where this TPazoSite belongs to
     destinations_cs: TCriticalSection; //< Critical section to protect adding of values to @link(destinations)
-    destinations: TObjectDictionary<TPazoSite, integer>; //< key = destination site, value = rank
     dirlist: TDirList;
 
     delay_leech: integer; //< value of delay for leeching from site in seconds
@@ -69,6 +87,8 @@ type
     speed_from: TStringList;
 
     activeTransfers: TStringList;
+
+    property Destinations: TList<TDestinationRank> read FDestinations; //< destination sites and ranks
 
     function StatusRealPreOrShouldPre: boolean;  //< returns @true if its a pre or at least it should be one
     function Source: boolean;
@@ -132,9 +152,6 @@ type
     procedure SetComplete(const cdno: String);
     function StatusText: String;
     procedure Clear;
-  private
-    cds: String;
-    function Tuzelj(const netname, channel, dir: String; de: TDirListEntry): boolean;
   end;
 
   TPazo = class
@@ -242,6 +259,12 @@ const
 var
   local_pazo_id: integer;
 
+
+constructor TDestinationRank.Create(const aPazoSite: TPazoSite; const aRank: integer);
+begin
+  FPazoSite := aPazoSite;
+  FRank := aRank;
+end;
 
 { TIdThreadSafeInt32WithEvent }
 
@@ -476,7 +499,7 @@ function TPazoSite.Tuzelj(const netname, channel, dir: String; de: TDirListEntry
 // dstdl is TDirList on destination site
 // dde is TDirListEntry on destination site
 var
-  fPair: TPair<TPazoSite, Integer>;
+  fDestination: TDestinationRank;
   dst: TPazoSite;
   dstrank: Integer;
   dstdl: TDirList;
@@ -519,10 +542,10 @@ begin
   pazo.lastTouch := Now();
 
   // enumerate possible destinations
-  for fPair in destinations do
+  for fDestination in destinations do
   begin
-    dst := fPair.Key;
-    dstrank := fPair.Value;
+    dst := fDestination.PazoSite;
+    dstrank := fDestination.Rank;
     try
       if error then exit;
       if dst.error then Continue;
@@ -1192,6 +1215,8 @@ begin
 end;
 
 function TPazoSite.AddDestination(const ps: TPazoSite; const rank: integer): boolean;
+var
+  fDestinationRank: TDestinationRank;
 begin
   Result := False;
   if error = True then
@@ -1205,7 +1230,15 @@ begin
 
       destinations_cs.Enter;
       try
-        destinations.AddOrSetValue(ps, rank);
+        for fDestinationRank in destinations do
+        begin
+          if fDestinationRank.FPazoSite.Name = ps.Name then
+            exit; //already have this destination
+        end;
+
+        fDestinationRank := TDestinationRank.Create(ps, rank);
+        destinations.Add(fDestinationRank);
+        destinations.Sort;
       finally
         destinations_cs.Leave;
       end;
@@ -1233,6 +1266,12 @@ begin
   end;
 end;
 
+//compare function to sort by rank
+function _CompareDestinationRanks({$IFDEF FPC}constref{$ELSE}const{$ENDIF} Left, Right: TDestinationRank): Integer;
+begin
+  Result := TComparer<Integer>.Default.Compare(Right.FRank, Left.FRank); //descending
+end;
+
 constructor TPazoSite.Create(const aParentPazo: TPazo; const aName, aMaindir: String);
 begin
   inherited Create;
@@ -1245,8 +1284,8 @@ begin
   ts := 0;
   firesourcesinstead := False;
   badcrcevents := 0;
-  // just a collection of pointers, no TPazoSite is created -> does not own any object
-  destinations := TObjectDictionary<TPazoSite, Integer>.Create([]);
+
+  FDestinations := TList<TDestinationRank>.Create(TComparer<TDestinationRank>.Construct(_CompareDestinationRanks));
   destinations_cs := TCriticalSection.Create;
 
   dirlist := TDirlist.Create(Name, nil, pazo.sl);
@@ -1766,7 +1805,7 @@ end;
 
 function TPazoSite.AsText: String;
 var
-  fPair: TPair<TPazoSite, Integer>;
+  fDestination: TDestinationRank;
 begin
   Result := '<u><b>SITE: ' + Name + '</b></u>';
   Result := Result + Format(': %s (%d items)', [maindir, dirlist.entries.Count]);
@@ -1778,9 +1817,9 @@ begin
   Result := Result + #13#10;
 
   Result := Result + 'Destinations:';
-  for fPair in destinations do
+  for fDestination in destinations do
   begin
-    Result := Result + Format(' %s(%d)', [fPair.Key.Name, fPair.Value]);
+    Result := Result + Format(' %s(%d)', [fDestination.FPazoSite.Name, fDestination.FRank]);
   end;
   Result := Result + #13#10;
 
@@ -1805,18 +1844,18 @@ end;
 
 function TPazoSite.RoutesText: String;
 var
-  fPair: TPair<TPazoSite, Integer>;
+  fDestination: TDestinationRank;
 begin
   Result := '<u>' + Name + '</u> -> ';
 
-  for fPair in destinations do
+  for fDestination in destinations do
   begin
-    Result := Result + Format('%s(%d) ', [fPair.Key.Name, fPair.Value]);
+    Result := Result + Format('%s(%d) ', [fDestination.FPazoSite.Name, fDestination.FRank]);
 
-    if (fPair.Key.delay_upload > 0) then
-      Result := Result + Format('[delayed upload for %ds] ', [fPair.Key.delay_upload])
-    else if (fPair.Key.delay_leech > 0) then
-      Result := Result + Format('[delayed leech for %ds] ', [fPair.Key.delay_leech]);
+    if (fDestination.FPazoSite.delay_upload > 0) then
+      Result := Result + Format('[delayed upload for %ds] ', [fDestination.FPazoSite.delay_upload])
+    else if (fDestination.FPazoSite.delay_leech > 0) then
+      Result := Result + Format('[delayed leech for %ds] ', [fDestination.FPazoSite.delay_leech]);
   end;
 
   // remove superfluous whitespace
