@@ -51,6 +51,7 @@
     Dirlist confusion on linux development builds causing wrong skip files output (#265)
 	
 --=============================( SLFTP v1.5.9 )===================================-
+    {#} sort destinations on KB level to make sure the highest ranked sites get race tasks created first before the queue sort
     {#} Fixed an issue which could cause autodirlists to stop working on very busy sites when queue clean is enabled
 
 --=============================( SLFTP v1.5.8 )===================================-
